# 114_CUDA_OpenMP

./: .gitignore  powershell
CUDA_sample/: DynamicParallelism0.cu  DynamicParallelism1.cu  DynamicParallelism2.cu  DynamicParallelism3.cu  DynamicalParallelism1.cu  ParallelReduction.cu  add.cu  async.cu  autostep.cu  bitreverse.cu  block_stream.cu  block_stream1.cu  globalVariable.cu  inner_product.cu  inner_product1.cu  memcpy.cu  multi_stream.cu  nonblock_stream.cu  nonblock_stream1.cu  old_vec_add.cu  pthread_test.cu  second_cuda.cu  second_cuda2.cu  second_cuda4.cu  simpleDivergence.cu  vec_add.cu  vec_add_out_boundary.cu  vec_add_run_output.txt
OpenMP/: atomic.c  b_sort.c  barrier.c  barrier_for VS.cpp  critical.c  critical1.c  default.c  default_err.c  different_thread.c  fe.c  firstprivate.c  for.c  hello_a.c  hello_b.c  hello_c.c  lastprivate.c  lock.c  loop1.c  loop2.c  matrix_times.c  matrix_times_omp.c  nowait.c  oe_sort.c  omp_get_time.c  omp_get_wtime.c  order.c  parallel.c  parallel_for.c  poe_sort.c  private.c  race.c  reduction.c  schedule.c  sections.c  sections2.c  sequential.c  shared.c  single.c  task.c  task_for.c  (+4 more)
Pthread/: 2thread_count.c  2thread_error_count.c  2thread_error_count_1.c  2thread_join.c  Prioritized_thread.c  Priority.c  a.txt  attribute.c  condition.c  condition_no_cond.c  condition_sem.c  condition_sem1.c  condvar.c  deadlock.c  detach.c  dotprod_mutex.c  fork.c  gettimeofday.c  (+45 more)
TensorCore/cuda_tensor/: CMakeLists.txt  gemm_cuda_core.cu  gemm_tensor_core.cu  main.cu
TensorCore/four_compare/: CMakeLists.txt  gemm_compare.cu
(+85 files in other folders)
